--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "mdb-react-ui-kit": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "semantic-ui-css": "^2.3.3",
-    "semantic-ui-react": "^2.0.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
